[gd_scene load_steps=13 format=3 uid="uid://b6wau5jcoeu4c"]

[ext_resource type="Script" path="res://Scripts/transition_manager.gd" id="1_c34qs"]
[ext_resource type="Script" path="res://Scripts/sfx.gd" id="3_m668j"]
[ext_resource type="PackedScene" uid="uid://3tg3fvdml66v" path="res://Scenes/village_manager.tscn" id="3_opgep"]
[ext_resource type="AudioStream" uid="uid://b1i26hal0cnv1" path="res://assets/sfx/Coin.wav" id="4_su0lg"]
[ext_resource type="AudioStream" uid="uid://d1hfmlyvs1olq" path="res://assets/sfx/PowerUp1.wav" id="5_if36l"]
[ext_resource type="AudioStream" uid="uid://md16skiav0kf" path="res://assets/sfx/Hit.wav" id="6_h2t1e"]
[ext_resource type="AudioStream" uid="uid://cjd5ylvqsxp8t" path="res://assets/sfx/GameOver2.wav" id="7_20my1"]
[ext_resource type="AudioStream" uid="uid://regt6eytk1lo" path="res://assets/sfx/Fireball.wav" id="8_3dhcj"]
[ext_resource type="AudioStream" uid="uid://c6j1moyg58fnt" path="res://assets/sfx/Alert2.wav" id="9_ekhs6"]

[sub_resource type="Animation" id="Animation_34lns"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_rebqk"]
resource_name = "screenTransitionToBoss"
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_7vg50"]
_data = {
"RESET": SubResource("Animation_34lns"),
"screenTransitionToBoss": SubResource("Animation_rebqk")
}

[node name="transitionManager" type="Node2D" groups=["Persist"]]
script = ExtResource("1_c34qs")

[node name="villageManager" parent="." instance=ExtResource("3_opgep")]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_7vg50")
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_right = 1153.0
offset_bottom = 650.0
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="SFX" type="Node" parent="."]
script = ExtResource("3_m668j")

[node name="pickupSurvivor" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_su0lg")
volume_db = -20.0

[node name="upgradeBoat" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_if36l")
volume_db = -20.0

[node name="getHit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_h2t1e")
volume_db = -10.0
pitch_scale = 2.0

[node name="gameOver" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_20my1")
pitch_scale = 1.5

[node name="safetyNet" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_3dhcj")
volume_db = -10.0
pitch_scale = 1.5

[node name="assignWorker" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_ekhs6")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
