extends Node

func playPickupSurvivor():
	$pickupSurvivor.play()
	
func playUpgradeBoat():
	$upgradeBoat.play()
	
func playTakeDamage():
	$getHit.play()
	
func playGameOver():
	$gameOver.play()
	
func playSafetyNet():
	$safetyNet.play()
	
func playAssignWorker():
	$assignWorker.play()
	
func playBoosterSound():
	$booster.play()
